--- a/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.Rmd
+++ b/2019-04-25-DerbyPy-DocumentingPythonPackages/DocumentingPythonPackages.Rmd
@@ -26,7 +26,8 @@ output:
 * <i class="fa fa-instagram"></i>: [instagram.com/andreysmelter](https://www.instagram.com/andreysmelter/)
 * <i class="fa fa-twitter"></i>: [twitter.com/smelandr](https://twitter.com/smelandr)
 
-### Slides are available: [bit.ly/DerbyPyWTD](http://bit.ly/DerbyPyWTD)
+#### Slides are available: [bit.ly/DerbyPyWTD](http://bit.ly/DerbyPyWTD)
+#### Slides are available (short): [bit.ly/DerbyPyWTDShort](http://bit.ly/DerbyPyWTDShort)
 
 
 ---
@@ -238,16 +239,16 @@ FILE
 
 
 ```{python python.reticulate=FALSE}
-"""
-This module contains routines for finding 
-roots of quadratic equations.
-"""
+"""  #<<
+This module contains routines for finding  #<<
+roots of quadratic equations.  #<<
+"""  #<<
 
 import cmath
 
 
 def quadratic(a, b, c):
-    """Solve quadratic equation."""
+    """Solve quadratic equation."""  #<<
     discriminant = cmath.sqrt(b**2.0 - 4.0 * a * c)
     x1 = (-b + discriminant) / (2.0 * a)
     x2 = (-b - discriminant) / (2.0 * a)
@@ -1298,7 +1299,7 @@ class: inverse
 <font color="green">$ mkdocs serve</font>
 INFO    -  Building documentation... 
 INFO    -  Cleaning site directory 
-[I 190425 02:27:22 server:298] Serving on http://127.0.0.1:8000
+[I 190425 02:27:22 server:298] Serving on <font color="yellow">http://127.0.0.1:8000</font>
 [I 190425 02:27:22 handlers:59] Start watching changes
 [I 190425 02:27:22 handlers:61] Start detecting changes
 </pre>
